--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6def63">  <td>25/03/03 23:15:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCaseWithBase.login()[pri:0, instance:com.app.auto.LoginTestCaseWithBase@18078bef]">login</td> 
+<tr bgcolor="e3cb8e">  <td>25/03/08 12:21:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCaseWithBase.login(java.lang.String,java.lang.String)[pri:0, instance:com.app.auto.LoginTestCaseWithBase@3e694b3f]">login</td> 
   <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="94f07b">  <td>25/03/03 23:15:24</td>   <td>-28</td> <td>&nbsp;</td><td title="&gt;&gt;BaseUtil.beforeTest()[pri:0, instance:com.app.auto.LoginTestCaseWithBase@18078bef]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="f9896d">  <td>25/03/08 12:20:43</td>   <td>-30141</td> <td>&nbsp;</td><td title="&gt;&gt;BaseUtil.beforeTest()[pri:0, instance:com.app.auto.LoginTestCaseWithBase@3e694b3f]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>25/03/08 12:21:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCaseWithBase.login(java.lang.String,java.lang.String)[pri:0, instance:com.app.auto.LoginTestCaseWithBase@3e694b3f]">login</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>25/03/08 12:21:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCaseWithBase.login(java.lang.String,java.lang.String)[pri:0, instance:com.app.auto.LoginTestCaseWithBase@3e694b3f]">login</td> 
+  <td>main@918221580</td>   <td></td> </tr>
 </table>
